[package]
name = "advent_of_code2019"
version = "0.1.0"
authors = ["Phil Hord <phord@purestorage.com>"]
edition = "2021"
repository = "https://github.com/username/advent-of-code2019"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = "0.2.2"
clap = { version = "4.0", features = ["derive"] }

criterion = "0.4"

[[bench]]
name = "aoc-bench"
harness = false

